--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -26,4 +26,6 @@
 
 <br>
 
-<%= link_to 'New Project', new_project_path %>
+<%= link_to 'New Project', new_project_path %></p>
+
+<%= button_to "logout", destroy_user_session_path, method: :delete  %>
