--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,3 +1,16 @@
+<nav class="navbar navbar-expand-md navbar-dark-color fixed-top bg-dark">
+  <div class="collapse navbar-collapse" id="navbarContent">
+    <div class="navbar-nav mr-auto">
+      <a class="nav-link" href="/">Home</a>
+    </div>
+      <% if user_signed_in? %>
+          <a class="nav-link" href="/users/sign_out" data-method="delete" rel="nofollow">Logout</a>
+      <% else %>
+          <a class="nav-link" href="users/sign_in">Sign In/Sign Up</a>
+      <% end %>
+  </div>
+</nav>
+
 <%= form_with(model: project, local: true) do |form| %>
   <% if project.errors.any? %>
     <div id="error_explanation">
@@ -19,6 +32,11 @@
   <div class="field">
     <%= form.label :description %>
     <%= form.text_area :description %>
+  </div>
+
+  <div class="field">
+    <%= form.label :titledescription %>
+    <%= form.text_area :titledescription %>
   </div>
 
   <div class="actions">
