--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,6 +1,57 @@
 <p id="notice"><%= notice %></p>
+<navbar-dark-color: rgba($blue, .5)>
 
-<h1>Projects</h1>
+<nav class="navbar navbar-expand-md navbar-dark-color fixed-top bg-dark">
+  <div class="collapse navbar-collapse" id="navbarContent">
+    <div class="navbar-nav mr-auto">
+      <a class="nav-link" href="/">Home</a>
+    </div>
+      <% if user_signed_in? %>
+          <a class="nav-link" href="users/sign_out" data-method="delete" rel="nofollow">Logout</a>
+      <% else %>
+          <a class="nav-link" href="users/sign_in">Sign In/Sign Up</a>
+      <% end %>
+    
+  </div>
+</nav>
+
+<div class="jumbotron" style="padding-bottom:0px">
+  <div class="container">
+    <h1 class="display-4">Projects Board</h1>
+    <p>This portfolio description is a placeholder</p>
+  </div>
+</div>
+
+
+<div class="container">
+    <div class="row mb-5">
+      <% @projects.each do |project| %>
+        <div class="col-md-4">
+          <h2><%= project.title %></h2>
+          <p><%= project.titledescription %></p>
+          <td><%= link_to 'Show', project %></td>
+          <br>
+          <br>
+        </div>
+      <% end %>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <table>
   <thead>
