--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,3 +1,20 @@
+<nav class="navbar navbar-expand-md navbar-dark-color fixed-top bg-dark">
+  <div class="collapse navbar-collapse" id="navbarContent">
+    <div class="navbar-nav mr-auto">
+      <a class="nav-link" href="/">Home</a>
+    </div>
+      <% if user_signed_in? %>
+          <a class="nav-link" href="/users/sign_out" data-method="delete" rel="nofollow">Logout</a>
+      <% else %>
+          <a class="nav-link" href="users/sign_in">Sign In/Sign Up</a>
+      <% end %>
+  </div>
+</nav>
+
+<br>
+<br>
+<br>
+
 <p id="notice"><%= notice %></p>
 
 <p>
