--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,6 +1,7 @@
 <p id="notice"><%= notice %></p>
 <navbar-dark-color: rgba($blue, .5)>
 
+
 <nav class="navbar navbar-expand-md navbar-dark-color fixed-top bg-dark">
   <div class="collapse navbar-collapse" id="navbarContent">
     <div class="navbar-nav mr-auto">
@@ -8,6 +9,7 @@
     </div>
       <% if user_signed_in? %>
           <a class="nav-link" href="users/sign_out" data-method="delete" rel="nofollow">Logout</a>
+          <a class="nav-link" href="/projects/new">New Project</a>
       <% else %>
           <a class="nav-link" href="users/sign_in">Sign In/Sign Up</a>
       <% end %>
@@ -23,13 +25,17 @@
 </div>
 
 
+
 <div class="container">
     <div class="row mb-5">
       <% @projects.each do |project| %>
         <div class="col-md-4">
           <h2><%= project.title %></h2>
           <p><%= project.titledescription %></p>
-          <td><%= link_to 'Show', project %></td>
+          <td><%= button_to 'Show More »', project, method: :get, :class => "btn-primary btn-small" %></td>
+          <% if user_signed_in? %>
+            <td><%= button_to 'Delete »', project, method: :delete, :class => "btn-primary btn-small", data: { confirm: 'Are you sure?' } %></td>
+          <% end %>
           <br>
           <br>
         </div>
@@ -37,46 +43,9 @@
   </div>
 </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @projects.each do |project| %>
-      <tr>
-        <td><%= project.title %></td>
-        <td><%= project.description %></td>
-        <td><%= link_to 'Show', project %></td>
-        <td><%= link_to 'Edit', edit_project_path(project) %></td>
-        <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
 <br>
 
-<%= link_to 'New Project', new_project_path %></p>
-
-<%= button_to "logout", destroy_user_session_path, method: :delete  %>
+<footer class="container text-center">
+  <b>Contact Information</b><p>Anthony Mitchell<br>719-375-5871<br>amitche3@uccs.edu</p>
+</footer>
+ 
