--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -19,12 +19,10 @@
 
 <div class="jumbotron" style="padding-bottom:0px">
   <div class="container">
-    <h1 class="display-4">Projects Board</h1>
-    <p>This portfolio description is a placeholder</p>
+    <h1 class="display-4">Anthony Mitchell Projects</h1>
+    <p>My name is Anthony and I graduated December of 2021 with my Bachelor of Science in Electrical Engineering from UCCS. I am currently persuing my Master's of Science in Electrical Engineering at UCCS. I also graduated with minors in computer science, computer engineering, and technical writing. Below this text is a showcase of some of my projects.</p>
   </div>
 </div>
-
-
 
 <div class="container">
     <div class="row mb-5">
