Pushing to heroku

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -35,8 +35,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :titledescription %>
-    <%= form.text_area :titledescription %>
+    <%= form.label :description2 %>
+    <%= form.text_area :description2 %>
   </div>
 
   <div class="actions">
