--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -35,7 +35,7 @@
   </div>
 
   <div class="field">
-    <%= form.label :description %>
+    <%= form.label :description2 %>
     <%= form.text_area :description2 %>
   </div>
 
